[gd_scene load_steps=2 format=3 uid="uid://dryn40fc3rcmj"]

[ext_resource type="Script" path="res://ui/adapter_interfaces/content_select_interface.gd" id="1_bvhyo"]

[node name="ContentSelectInterface" type="VBoxContainer"]
script = ExtResource("1_bvhyo")

[node name="BlacklistToggle" type="HBoxContainer" parent="."]
unique_name_in_owner = true
layout_mode = 2

[node name="Label" type="Label" parent="BlacklistToggle"]
layout_mode = 2
text = "ContentSelectInterface_Whitelist"

[node name="BlacklistEnabled" type="CheckButton" parent="BlacklistToggle"]
unique_name_in_owner = true
layout_mode = 2

[node name="Label2" type="Label" parent="BlacklistToggle"]
layout_mode = 2
text = "ContentSelectInterface_Blacklist "

[node name="Slots" type="HFlowContainer" parent="."]
unique_name_in_owner = true
layout_mode = 2

[connection signal="toggled" from="BlacklistToggle/BlacklistEnabled" to="." method="_on_blacklist_enabled_toggled"]
